--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -44,19 +44,19 @@
                         <a class="nav-link" href="inicio.html">Inicio</a>
                     </li>
                     <li class="nav-item-active">
-                        <a class="nav-link" href="ConsejosGS.html">Consejos Generales</a>
+                        <a class="nav-link" href="consejosGS.html">Consejos Generales</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="ProteccionDC.html">Proteccion de contraseñas</a>
+                        <a class="nav-link" href="protecionDContraeñas.html">Proteccion de contraseñas</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="SeguridadEnRedesS.html">Seguridad en redes</a>
+                        <a class="nav-link" href="seguridadEnRedesS.html">Seguridad en redes</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="ProteccionCM.html">Malware</a>
+                        <a class="nav-link" href="proteccionMalware.html">Malware</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="RecursosyEnlacesU.html">Recursos y enlaces</a>
+                        <a class="nav-link" href="recursosEnlacesU.html">Recursos y enlaces</a>
                     </li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
     
     </nav>
     <div class="text-center">
-        <img src="imagenes/cara.jpg" class="rounded" alt="...">
+        <img src="imgCSS/cara.jpg" class="rounded" alt="...">
     </div>
 
     <p class="text-center">
